--- a/index.html
+++ b/index.html
@@ -13,6 +13,49 @@
     <a class="btn" href="#">Primary button</a>
   </div>
 
+  <div>
+    <a class="btn btn-subtle" href="#">Subtle button</a>
+  </div>
+
+  <div>
+    <a class="btn btn-ghost" href="#">Ghost button</a>
+  </div>
+
+  <div>
+    <a class="btn btn-warning" href="#">Warning button</a>
+  </div>
+
+  <div>
+    <a class="btn btn-small" href="#">Primary button small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-small btn-subtle" href="#">Subtle botton small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-small btn-ghost" href="#">Ghost botton small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-small btn-warning" href="#">Warning buttton small</a>
+  </div>
+
+  <div>
+    <a class="btn btn-big" href="#">Primary button big</a>
+  </div>
+
+  <div>
+    <a class="btn btn-big btn-subtle" href="#">Subtle botton big</a>
+  </div>
+
+  <div>
+    <a class="btn btn-big btn-ghost" href="#">Ghost botton big</a>
+  </div>
+
+  <div>
+    <a class="btn btn-big " href="#">Warning botton big</a>
+  </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
 </body>
