fixed borders completly

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </div>
 
   <div>
-    <a class="btn btn-small btn-warning" href="#">Warning buttton small</a>
+    <a class="btn btn-small btn-warning" href="#">Warning button small</a>
   </div>
 
   <div>
@@ -46,15 +46,15 @@
   </div>
 
   <div>
-    <a class="btn btn-big btn-subtle" href="#">Subtle botton big</a>
+    <a class="btn btn-big btn-subtle" href="#">Subtle button big</a>
   </div>
 
   <div>
-    <a class="btn btn-big btn-ghost" href="#">Ghost botton big</a>
+    <a class="btn btn-big btn-ghost" href="#">Ghost button big</a>
   </div>
 
   <div>
-    <a class="btn btn-big " href="#">Warning botton big</a>
+    <a class="btn btn-big " href="#">Warning button big</a>
   </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
