--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 
   <div>
-    <a class="btn btn-big " href="#">Warning button big</a>
+    <a class="btn btn-big btn-warning" href="#">Warning button big</a>
   </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
